css/style.css
body {
    width: 100%;
    background-color: #f5f5f5;
    margin: 0% !important;
    padding: 0% !important;
    font-family: 'Cormorant Garamond', serif;    
}
::selection {
    color: white;
    background: #00969eec;
}
::-moz-selection {
    color: white;
    background: #00969eec;
}
.copyright {
    width: 100%;
    margin-bottom: 0.25%;
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    letter-spacing: 0.1em;
    font-size: 0.5em;
}
@media (max-width: 575.98px) {
    .copyright {
        font-size: 0.3em;
    }
}
#progettih1 {
    display: none;
}

.docuh1 {
    color: black;
    font-weight: 300;
    font-size: 7.5vw;
    line-height: 2em;
    margin-top: 0%;
    margin-bottom: 0%;
    letter-spacing: 1vw;
}

.docusection {
    width: 100%;
}
.docudivcont {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10%;
}
.docuparcont {
    margin-bottom: 5%;
}
.docuh2 {
    font-family: 'Montserrat', sans-serif;
    margin: 0%;
    color: #00979E;
    font-size: 2.5em;
    font-weight: 400;
    letter-spacing: 0.2vw;
    text-align: center;
}
.docudivconth2 {
    width: 100%;
    text-align: center;
    margin-bottom: 5%;
}
.docuh3 {
    font-family: 'Montserrat', sans-serif;
    margin: 0%;
    color: #00979E;
    font-size: 2em;
    font-weight: 400;
    letter-spacing: 0.2vw;
    margin-bottom: 5%;
}
.docuh4 {
    font-family: 'Montserrat', sans-serif;
    margin: 0%;
    font-size: 1.6em;
    font-weight: 400;
    letter-spacing: 0.1vw;
    margin-bottom: 1.5%;
}
.docutext {
    margin: 0%;
    font-size: 1.6em;
    font-weight: 400;
    line-height: 1.5em;
}
.docutext a {
    color: black;
    text-decoration: underline #00979e;
}
.docuimg {
    width: 100%;
    height: auto;
    margin-top: 5%;
    margin-bottom: 5%;
}

.docuimg2 {
    margin-top: 2%;
    margin-bottom: 2%;
    width: 45%;
    height: auto;
}
.docuimgcont {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}
.docuparcont ul {
    list-style-type: disc #00979e;
}
.docuparcont ul li {
    margin: 0%;
    font-size: 1.4em;
    font-weight: 400;
    line-height: 1.4em;   
}

.homeheader {
    height: 100vh;
    background-image: url('../photos/portfolio/mezonnight.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    align-content: center;
    padding-top: 0px;
    text-align: center;
}

nav {
    width: 100%;    
    position: fixed;
    position: -webkit-sticky;
    top: 0;
    z-index:1;
    transition: top 0.8s;
    -webkit-transition: top 0.8s;
    -moz-transition: top 0.8s;
    -o-transition: top 0.8s;
}

.linkbox{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: normal;
    justify-content: normal;
    align-items: normal;
    position: relative;
    padding-top: 3%;
    padding-right: 0%;
    padding-bottom: 0%;
    padding-left: 7%;
}


.spacer {
    display: block;
    width: 100%;
}

.h1container {
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

h1 {
    color: white;
    font-weight: 300;
    font-size: 7.5vw;
    line-height: 2em;
    margin-top: 0%;
    margin-bottom: 0%;
    letter-spacing: 1vw;
}

a.active {
    color: #00979E;
}

.title {
    padding-right: 7%;
    text-decoration: none;
    font-family: 'Montserrat', sans-serif;
    color: rgb(255, 255, 255);
    font-weight: 400;
    font-size: 0.8em;
    letter-spacing: 0.2em;
}


.coversocial {
    width:100%;
    position: absolute;
    bottom: 3%;
}

.coverinstagram {
    text-decoration: none;
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 0.5em;
    letter-spacing: 0.2em;
    color: whitesmoke;
}

.coverinstagram:hover {
    color: #00979E
} 

.coverflickr {
    text-decoration: none;
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 0.5em;
    letter-spacing: 0.2em;
    color: whitesmoke;
}

.coverflickr:hover {
    color: #00979E
} 

a:hover {
    text-decoration: none !important;
    color: #00979e;
}

.title_lines {
    margin-top: 10%;
    margin-bottom: 10%;
    position: relative;
    overflow: hidden;
    z-index: 1;
    text-align: center;
}
.title_lines h2 {
    font-size: 4vw;
    font-weight: 300;
    letter-spacing: 0.1em;
}

.title_lines:before, .title_lines:after {
    position: absolute;
    top: 51%;
    overflow: hidden;
    width: 30%;
    height: 1px;
    content: '\a0';
    background-color: #00979E;
    margin-left: 20%;
}
.title_lines:before {
    margin-left: -50%;
    text-align: right;
}


.portfoliocontainer {
    position: relative;
    column-count: 2;
    padding: 0% 10% 0% 10%;
}

.portfolioimage {
    width: 100%;
    display: inline-block;
    overflow: hidden;
}

.portfoliocontainer img {
    width: 100%;
}






footer {
    margin-top: 15%;
}

#indexfooter {
    margin-top: 0% !important;
}

.widefooterlinks{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: space-between;
}
.contactfooter {
    margin: 0% 2.5% 0% 0%;
}
.contactfooter p {
    text-align: right;
    margin: 0%;
    text-decoration: none;
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 0.8em;
    letter-spacing: 0.1em;
}
.contactfooter a {
    text-decoration: none;
    color: black;
    transition: 0.25s ease-in-out;
    text-decoration: underline #00979E;
}
.contactfooter a:hover {
    text-decoration: none;
    color: #00979E;
}
.mbot5 {
    margin-bottom: 2% !important;
}
.socialfooter {
    width: 100%;
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    font-size: 3.5vw;
    font-weight: 400;
    letter-spacing: 0.1em;
}

.socialcontainerfooter {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    margin: 0% 0% 0% 2.5%;
}
/* ... */

